# easy-booking-bot

./: .dist.env  Dockerfile  Makefile  pyproject.toml
src/: config.py  database.py  main.py
src/exceptions/: __init__.py  base.py
src/models/: __init__.py  event.py  organization.py  user.py
src/repositories/: __init__.py  base.py
src/repositories/mappers/: __init__.py  base.py
src/schemes/: __init__.py  event.py  organization.py  user.py
src/services/: __init__.py  auth.py
src/utils/: db_manager.py
